// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An entity with a scope of "all" must transform appropriately 1`] = `
{
  "privateData": null,
  "publicData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "address": "123 Main Street, New York, NY, USA",
      "contact1": {
        "email": "ellen@contoso.com",
        "gitHubID": "ellencontoso",
        "name": "Ellen Adams",
      },
      "contact2": {
        "email": "lisa@contoso.com",
        "gitHubID": "lisacontoso",
        "name": "Lisa Andrews",
      },
      "gitHubOrganization": "contoso",
      "name": "Contoso Ltd.",
      "url": "https://contoso.com/",
    },
    "signature": {
      "signedAt": "1970-01-01T00:00:00.000Z",
      "signedBy": "Domenic Denicola",
      "signedByTitle": "Software engineer",
    },
    "verified": false,
    "workstreams": "all",
  },
  "type": "entity",
}
`;

exports[`An entity with an array of known scopes must transform appropriately 1`] = `
{
  "privateData": null,
  "publicData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "address": "123 Main Street, New York, NY, USA",
      "contact1": {
        "email": "ellen@contoso.com",
        "gitHubID": "ellencontoso",
        "name": "Ellen Adams",
      },
      "contact2": {
        "email": "lisa@contoso.com",
        "gitHubID": "lisacontoso",
        "name": "Lisa Andrews",
      },
      "gitHubOrganization": "contoso",
      "name": "Contoso Ltd.",
      "url": "https://contoso.com/",
    },
    "signature": {
      "signedAt": "1970-01-01T00:00:00.000Z",
      "signedBy": "Domenic Denicola",
      "signedByTitle": "Software engineer",
    },
    "verified": false,
    "workstreams": [
      "compat",
      "console",
      "xhr",
    ],
  },
  "type": "entity",
}
`;

exports[`An individual selecting a single known workstream must transform appropriately 1`] = `
{
  "privateData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "address": "New York, NY, USA",
      "email": "d@domenic.me",
    },
  },
  "publicData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "gitHubID": "domenic",
      "name": "Domenic Denicola",
    },
    "signature": {
      "signedAt": "1970-01-01T00:00:00.000Z",
    },
    "verified": false,
    "workstreams": [
      "html",
    ],
  },
  "type": "individual",
}
`;

exports[`An individual with a scope of "all" must transform appropriately 1`] = `
{
  "privateData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "address": "New York, NY, USA",
      "email": "d@domenic.me",
    },
  },
  "publicData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "gitHubID": "domenic",
      "name": "Domenic Denicola",
    },
    "signature": {
      "signedAt": "1970-01-01T00:00:00.000Z",
    },
    "verified": false,
    "workstreams": "all",
  },
  "type": "individual",
}
`;

exports[`An individual with an array of known scopes must transform appropriately 1`] = `
{
  "privateData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "address": "New York, NY, USA",
      "email": "d@domenic.me",
    },
  },
  "publicData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "gitHubID": "domenic",
      "name": "Domenic Denicola",
    },
    "signature": {
      "signedAt": "1970-01-01T00:00:00.000Z",
    },
    "verified": false,
    "workstreams": [
      "compat",
      "console",
      "xhr",
    ],
  },
  "type": "individual",
}
`;

exports[`An invited individual with invited as their workstreams must transform appropriately 1`] = `
{
  "privateData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "address": "New York, NY, USA",
      "email": "d@domenic.me",
    },
  },
  "publicData": {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": {
      "gitHubID": "domenic",
      "name": "Domenic Denicola",
    },
    "invited": true,
    "signature": {
      "signedAt": "1970-01-01T00:00:00.000Z",
    },
    "verified": false,
    "workstreams": "Verifier: replace this with the array of workstreams the SG has invited this individual to, or replace it with "all" if they're invited to all workstreams.",
  },
  "type": "individual",
}
`;
